# wezterm-settings-ui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/: FUNDING.yml  SECURITY.md
.specify/memory/: constitution.md
plugin/: init.lua
specs/001-appearance-settings/: plan.md  research.md  spec.md  tasks.md
specs/001-tui-settings/: spec.md
specs/gui-frontend-deferred/001-appearance-settings/: data-model.md  quickstart.md  research.md  spec.md
specs/gui-frontend-deferred/001-appearance-settings/contracts/: tauri-commands.md
src/: app.rs  main.rs  update.rs
src-gui/: App.css  App.tsx
src-gui/types/: config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: backdrops.rs  config.rs  mod.rs  schemes.rs  system.rs
src-tauri/src/lua/: generator.rs  mod.rs  parser.rs
src-tauri/src/models/: config.rs  mod.rs
src/ui/: layout.rs  mod.rs  widgets.rs
src/ui/panels/: colors.rs  cursor.rs  fonts.rs  gpu.rs  keybindings.rs  mod.rs  themes.rs  window.rs
