[package]
name = "wezterm-settings-tui"
version = "0.1.0"
description = "A TUI for managing WezTerm configuration"
authors = ["WezTerm Settings UI Contributors"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jms830/wezterm-settings-ui"
keywords = ["wezterm", "terminal", "tui", "config"]
categories = ["command-line-utilities", "config"]

[[bin]]
name = "wezterm-settings-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Lua template generation
tera = "1.20"

# Font enumeration
fontdb = "0.23"

# Config path detection
dirs = "6.0"

# Config import (regex parsing)
regex = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Fuzzy matching for font search
fuzzy-matcher = "0.3"

# Timestamps for backups
chrono = "0.4"

wezterm_settings_gui_lib = { package = "wezterm-settings-gui", path = "src-tauri" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
