[package]
name = "wezterm-settings-gui"
version = "0.1.0"
description = "A GUI for managing WezTerm configuration and plugins"
authors = ["Jordan"]
edition = "2021"

[lib]
name = "wezterm_settings_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
